# inky-frame

./: README.md  pyproject.toml
app/: config.py  image_ops.py  main.py  scheduler.py  storage.py
deploy/systemd/: eink-frame.service
static/: app.js  crop.js  settings.js  styles.css
templates/: base.html  crop.html  index.html  settings.html
